
2023-07-24  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y (entry_statement): don't check parameter address
	  directly on ENTRY, because it just assigns it
	* codegen.c (output_internal_function, output_entry_function): moved
	  setting of non-passed parameters to NULL to entry function as we only
	  have ordinal CALL numbers available there; set BY VALUE parameters to
	  zero instead of NULL
	* codegen.c (output_field_no_target): extracted to reduce code duplication
	* typeck.c (cb_emit_call): fixed skipping memory-fence generation for
	  EXTERNAL/BASED sub-fields

2023-07-22  Simon Sobisch <simonsobisch@gnu.org>

	* field.c (compute_size): inspect field storage to check for
	  the appropriate field size limit
	* tree.h (cb_field): new flag_above_unbounded
	* tree.c (cb_field_has_unbounded), tree.h: removed; use
	  flag_above_unbounded in callers (typeck.c, cobc.c) instead
	* parser.y (occurs_clause): set flag_above_unbounded in parents

2023-07-21  Simon Sobisch <simonsobisch@gnu.org>

	* typeck.c (refmod_checks): fixed ec-bound-refmod checks for UNBOUNDED
	* field.c (compute_size): take fields before the UNBOUNDED field into
	  account when calculating its maximum elements;
	  fix compiler crash if DEPENDING field does not exist
	* parser.y (validated_field_reference): extracted from (identifier_field)
	  and used in all places with the exact same code

2023-07-20  Simon Sobisch <simonsobisch@gnu.org>

	* field.c (copy_validation): new function
	* field.c (copy_validation, copy_into_field): handling validation
	* cobc.c (print_fields): leave a hint to field being TYPEDEF
	* cobc.c (xref_fields): dont output references for TYPEDEF sub items

2023-07-19  Simon Sobisch <simonsobisch@gnu.org>

	* typeck.c (refmod_checks): extracted from (cb_build_identifier)
	* typeck.c (refmod_checks): prevent condition-names to be reference-modified
	* parser.y (class_value): improved error messages
	* tree.c (cb_build_cast): set numeric category for all integer casts
