@@ -1,4 +1,8 @@
 
+2023-07-26  Simon Sobisch <simonsobisch@gnu.org>
+
+	* typeck.c (search_set_keys): improving SEARCH ALL syntax checks
+
 2023-07-24  Simon Sobisch <simonsobisch@gnu.org>
 
 	* parser.y (entry_statement): don't check parameter address
